kubernetes/torrent/qbittorrent/qbittorrent-uhd.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-uhd
  namespace: torrent
  labels:
    app: qbittorrent-uhd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-uhd
  template:
    metadata:
      labels:
        app: qbittorrent-uhd
    spec:
      # NonEssential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/nonessential
                operator: In
                values:
                - "true"
      containers:
      - name: qbitvpn
        image: dyonr/qbittorrentvpn:latest
        # command: ["/bin/sh"]
        # args: ["-c", "sleep infinity"]
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        ports:
        - name: webui
          containerPort: 8080
          protocol: TCP
        - name: tcplisten
          containerPort: 8999
          protocol: TCP
        - name: udplisten
          containerPort: 8999
          protocol: UDP
        volumeMounts:
          - name: goose-ovpn-files-volume
            mountPath: /config/openvpn
          - name: goose-loginconf-volume
            mountPath: /goose/login.conf
            subPath: login.conf
            readOnly: true
          - name: torrent-uhd-data-volume
            mountPath: /config/qBittorrent
          - name: qbit-torrent-data-volume
            mountPath: /downloads
      volumes:
      - name: goose-ovpn-files-volume
        secret:
          secretName: goose-credentials
          defaultMode: 0744
          items:
          - key: ovpn5.ovpn
            path: ovpn5.ovpn
      - name: goose-loginconf-volume
        secret:
          secretName: goose-credentials
          defaultMode: 0744
          items:
          - key: login.conf
            path: login.conf
      - name: qbit-torrent-data-volume
        persistentVolumeClaim:
          claimName: qbit-torrent-data-claim
      - name: torrent-uhd-data-volume
        persistentVolumeClaim:
          claimName: torrent-uhd-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-uhd-service
  labels:
    app: qbittorrent-uhd
  namespace: torrent
spec:
  ports:
  - name: webui
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: tcplisten
    port: 8999
    targetPort: 8999
    protocol: TCP
  - name: udplisten
    port: 8999
    targetPort: 8999
    protocol: UDP
  selector:
    app: qbittorrent-uhd


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-uhd-https
  namespace: torrent
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "torrent-sablier-qbittorrent@kubernetescrd"
spec:
  tls:
  - secretName: qbittorrent-uhd-bas-tls
  rules:
  - host: torrent-uhd.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-uhd-service
            port:
              number: 80
