kubernetes/torrent/qbittorrent/qbittorrent.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: torrent
  labels:
    app: qbittorrent
    # sablier.enable: "true"
    # sablier.group: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      # NonEssential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/nonessential
                operator: In
                values:
                - "true"
      # hostNetwork: true
      volumes:
      - name: torrent-config-volume
        persistentVolumeClaim:
          claimName: torrent-config-claim
      - name: qbit-torrent-data-volume
        persistentVolumeClaim:
          claimName: qbit-torrent-data-claim
      - name: qbittorent-openvpn-start-volume
        configMap:
          name: qbittorrent-openvpn-start
          defaultMode: 0744
      containers:
      - name: qbitvpn
        resources: 
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        image: dyonr/qbittorrentvpn:latest
        
        # image: ubuntu:latest
        # sleep infinity commmand
        # command: ["/bin/sh"]
        # args: ["-c", "sleep infinity"]


        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   initialDelaySeconds: 60
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        ports:
        - name: webui
          containerPort: 8080
          protocol: TCP
        - name: tcplisten
          containerPort: 8999
          protocol: TCP
        - name: udplisten
          containerPort: 8999
          protocol: UDP
        volumeMounts:
          - name: torrent-config-volume
            mountPath: /config
          - name: qbit-torrent-data-volume
            mountPath: /downloads
          - name: qbittorent-openvpn-start-volume
            mountPath: /etc/openvpn/start.sh
            subPath: start.sh
        
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: qbittorrent-lb-service
#   namespace: torrent
# spec:
#   ports:
#   - name: webui
#     port: 80
#     targetPort: 8080
#     protocol: TCP
#   - name: tcplisten
#     port: 8999
#     targetPort: 8999
#     protocol: TCP
#   - name: udplisten
#     port: 8999
#     targetPort: 8999
#     protocol: UDP
#   selector:
#     app: qbittorrent
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   loadBalancerIP: 192.168.6.61


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent-lb-service
  namespace: torrent
spec:
  ports:
  - name: webui
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: tcplisten
    port: 8999
    targetPort: 8999
    protocol: TCP
  - name: udplisten
    port: 8999
    targetPort: 8999
    protocol: UDP
  selector:
    app: qbittorrent


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-https
  namespace: torrent
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "torrent-sablier-qbittorrent@kubernetescrd"
spec:
  tls:
  - secretName: qbittorrent-bas-tls
  rules:
  - host: torrent.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-lb-service
            port:
              number: 80
